error fixes part 2

--- a/palm_model_system-v23.10-rc.1/packages/palm/model/src/Makefile
+++ b/palm_model_system-v23.10-rc.1/packages/palm/model/src/Makefile
@@ -39,7 +39,7 @@ SOURCES = \
 	advec_w_pw.f90 \
 	advec_ws.f90 \
 	advec_w_up.f90 \
-	anthropgenic_heat_mod.f90 \
+	anthropogenic_heat_mod.f90 \
 	array_utilities.f90 \
 	average_3d_data.f90 \
 	basic_constants_and_equations_mod.f90 \
@@ -281,11 +281,12 @@ advec_w_pw.o: \
 advec_w_up.o: \
 	mod_kinds.o \
 	modules.o
-anthropgenic_heat_mod.o: \
+anthropogenic_heat_mod.o: \
 	mod_kinds.o \
 	modules.o \
 	basic_constants_and_equations_mod.o \
 	cpulog_mod.o \
+	indoor_model_mod.o \
 	netcdf_data_input_mod.o \
 	surface_mod.o
 average_3d_data.o: \
